# SMQTK-IQR

./: .flake8  .gitlab-ci.yml  .mypy.ini  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  codecov.yml  pyproject.toml
.github/workflows/: ci-unittests.yml  docker.yml
docker/: .env  docker-compose.build.yml
docker/smqtk_classifier_service/: Dockerfile  default_server.cpu.json  run_container.cpu.sh
docker/smqtk_iqr_playground/: Dockerfile  README.rst  run_container.cpu.sh  run_container.gpu.sh
docker/smqtk_iqr_playground/default_confs/: nn_index_tool.json  psql_table_init.sql  runApp.IqrClassifier.json
docker/smqtk_iqr_playground/default_confs/cpu/: compute_many_descriptors.json  runApp.IqrService.json
docker/smqtk_iqr_playground/default_confs/gpu/: compute_many_descriptors.json  (+1 more)
docker/tpl/caffe1/: Dockerfile
docs/: conf.py  index.rst  installation.rst  iqr_classes.rst  readthedocs-reqs.txt  release_notes.rst  webservices.rst
docs/environment/: installing_mongodb.rst
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.15.1.rst
docs/tutorials/: .gitignore  README.rst  build_models_demo.py  chip_geodata_images.py  chip_hidden_layers.py  chip_images_demo.py  chip_images_kw.py  demo_dummy_descriptors.sh  demo_hidden_layers.sh  demo_notes.sh  demo_notes_v2.sh  dev_notes.txt  iqr_chip_image.sh
docs/tutorials/tutorial_001_kwcoco_dummy_descriptors/: README.rst  ingest_precomputed_descriptors.py  precompute_contrived_descriptors.py  prepare_contrived_descriptors.py  runApp.IqrRestService.json  runApp.IqrSearchApp.json  run_tutorial_001.sh
docs/tutorials/tutorial_002_kwcoco_real_descriptors/: README.rst  chip_hidden_layers.py  demo_hidden_layers.sh  ingest_precomputed_descriptors.py  prepare_real_descriptors.py  run_tutorial_002.sh
docs/tutorials/tutorial_003_geowatch_descriptors/: README.rst  ingest_precomputed_descriptors.py  prepare_real_descriptors.py  prepare_real_multitemporal_descriptors.py  runApp.IqrSearchApp.json  run_tutorial_003.sh
docs/webservices/: iqrdemonstration.rst
scripts/: dev_setup.py  dev_setup.sh
smqtk_iqr/: __init__.py
smqtk_iqr/iqr/: iqr_controller.py  iqr_session.py
smqtk_iqr/utils/: __init__.py  cli.py  compute_functions.py  compute_many_descriptors.py  database_info.py  generate_image_transform.py  iqrTrainClassifier.py  iqr_app_model_generation.py  mimetype.py  mongo_sessions.py  nn_index_tool.py  preview_cache.py  probability.py  runApplication.py  url.py  video.py  web.py
smqtk_iqr/web/: __init__.py
smqtk_iqr/web/classifier_service/: api.rst  classifier_server.py
smqtk_iqr/web/iqr_service/: iqr_server.py
smqtk_iqr/web/search_app/: __init__.py
tests/iqr/: test_iqr_session.py
tests/utils/: test_compute_many_descriptors.py  test_generate_image_transform.py  test_url_tools.py  test_web.py
tests/web/classifier_service/: dummy_classifier.py  dummy_descriptor_generator.py  test_classifier_server.py
tests/web/iqr_service/: stubs.py  test_iqr_service.py
tests/web/search_app/: test_iqr_search.py
(+29 files in other folders)
